add pagination in index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,11 @@
       <hr>
       <h2>Tallennetut litteroinnit</h2>
       <hr>
+      <p>
+        <a href="/{{ page - 1 }}">&lt;&lt;</a>
+        Sivu {{ page }}/{{ page_count }}
+        <a href="/{{ page + 1 }}">&gt;&gt;</a>
+      </p>
       {% for transcription in transcriptions %}
       <div class="transcription">
         <h3>
@@ -65,7 +70,12 @@
 
       </div>
       {% endfor %}
-
+      <p>
+        <a href="/{{ page - 1 }}">&lt;&lt;</a>
+        Sivu {{ page }}/{{ page_count }}
+        <a href="/{{ page + 1 }}">&gt;&gt;</a>
+      </p>
+      <hr />
 
       {% endif %}
     </div>
