add information who is the user in transcription page

--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -79,6 +79,7 @@
             <span>TYHJÄ</span>
             {% endif %}
         </li>
+        <li>Käyttäjä: {{ user.username }}</li>
     </ul>
     <p><a href="/edit/{{ transcription.id }}">Muokkaa</a> </p>
     <hr>
