--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -118,7 +118,7 @@
 
                 {% if transcription.source == 'youtube' %}
                 <a rel="noreferrer noopener" target="_blank" href="{{transcription.source_path }}&t={{start_sec}}">
-                    {{start_sec}}</a>
+                    {{time_str}}</a>
                 {% else %}
                 {% if local_audio_file_copy_exists %}
                 <a href="/transcription/{{ transcription.id }}/{{ page }}?audiotime={{time_str}}#audio-player"> <span
