--- a/templates/register.html
+++ b/templates/register.html
@@ -4,21 +4,36 @@
 <head>
   <meta charset="UTF-8">
   <title>Rekisteröinti</title>
+  <style>
+    .flash-message {
+      color: red;
+    }
+  </style>
 </head>
 
 <body>
-  <form action="/create" method="post">
+
+  <h1>Luo tunnus</h1>
+
+  {% for message in get_flashed_messages() %}
+  <p class="flash-message">
+    <b>{{ message }}</b>
+  </p>
+  {% endfor %}
+  <form action="/register" method="post">
     <p>
       Tunnus: <br />
-      <input type="text" name="username" />
+      <input type="text" name="username" required value="{{ filled.username }}" />
     </p>
+    <p>Salasanan tulee olla vähintään 8 merkkiä pitkä ja sisältää ainakin yhden ison kirjaimen, yhden pienen kirjaimen
+      ja yhden numeron</p>
     <p>
       Salasana: <br />
-      <input type="password" name="password1" />
+      <input type="password" name="password1" required />
     </p>
     <p>
       Salasana uudestaan: <br />
-      <input type="password" name="password2" />
+      <input type="password" name="password2" required />
     </p>
     <input type="submit" value="Luo tunnus" />
   </form>
