--- a/templates/create.html
+++ b/templates/create.html
@@ -18,7 +18,8 @@
         <div>
             <h2>Luo uusi litterointi</h2>
 
-            <form action="/new_transcription" method="post" enctype=multipart/form-data>
+            <form onkeydown="return event.key != 'Enter';" action="/new_transcription" method="post"
+                enctype=multipart/form-data>
                 <p>
                     Otsikko:
                     <input type="text" size="50" maxlength="250" name="title" required />
