--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,7 +8,8 @@
 <body>
   <h1>Litteroinnin muokkaus</h1>
 
-  <form action="/edit/{{ transcription.id }}" method="post" enctype=multipart/form-data>
+  <form onkeydown="return event.key != 'Enter';" action="/edit/{{ transcription.id }}" method="post"
+    enctype=multipart/form-data>
     <p>
       Otsikko:
       <input type="text" size="90" maxlength="250" name="title" required value="{{transcription.title}}" />
