--- a/templates/create.html
+++ b/templates/create.html
@@ -43,7 +43,7 @@
 
                     <br />
                     Pituus ( h:m:s / sec):
-                    <input type="text" size="50" maxlength="30" name="duration_sec" />
+                    <input type="text" size="50" pattern="[0-9:]*" maxlength="30" name="duration_sec" />
 
                     <br />
                     Lisenssi:
