add default start time from the selected fragment with +1 second offset according to add text context

--- a/templates/add_text_fragment.html
+++ b/templates/add_text_fragment.html
@@ -14,7 +14,7 @@
       <span> {{transcription_id}} </span>
       <br>
       Aloitusaika (h:m:sec):
-      <input name="start_time" pattern="[0-9:]*" maxlength="12" required />
+      <input name="start_time" pattern="[0-9:]*" maxlength="12" required value="{{start_time_hms}}" />
       <br>
       Uusi teksti:<br>
       <textarea name="words" rows="4" cols="90"> </textarea>
