--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -145,7 +145,7 @@
             <div>|<a href="/edit_text_fragment/{{ id }}?return_page={{page}}">Muokkaa</a>
                 | <a href="/remove_text_fragment/{{ id }}?return_page={{page}}">Poista</a> | <span
                     class="text_id">{{id}}</span>
-                | <a href="/add_text_fragment/{{ transcription.id }}?return_page={{page}}">Lisää</a>
+                | <a href="/add_text_fragment/{{ transcription.id }}?return_page={{page}}&start_id={{id}}">Lisää</a>
             </div>
         </div>
 
