--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Kirjautuminen</title>
+  <style>
+    .flash-message {
+      color: red;
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
