add separate table for edited text fragments to keep track of edit versions

--- a/templates/transcription.html
+++ b/templates/transcription.html
@@ -138,7 +138,7 @@
     </div>
 
     <div class="text-fragments">
-        {% for id, start_sec, time_str, start_ms, words in text_fragments %}
+        {% for id, start_sec, time_str, start_ms, words, version in text_fragments %}
         <div class="t-row" id="t-id-{{id}}">
             <div class="time-stamps-div"><span class="time-stamps">
 
