--- a/templates/transcriptions_table_listing.html
+++ b/templates/transcriptions_table_listing.html
@@ -1,43 +1,4 @@
-<style>
-    table {
-        width: 100%;
-        border-collapse: collapse;
-    }
-
-    th {
-        background-color: #f2f2f2;
-
-        color: #333;
-
-        font-weight: bold;
-        padding: 0.5rem;
-        border: 1px solid #ddd;
-        min-width: 4.5rem;
-    }
-
-
-    td {
-        padding: 0.2rem;
-        border: 1px solid #ddd;
-        text-align: left;
-        max-width: 50rem;
-    }
-
-
-    tr:nth-child(even) {
-        background-color: #f9f9f9;
-    }
-
-    tr:nth-child(odd) {
-        background-color: #ffffff;
-    }
-
-
-    tr:hover {
-        background-color: #e6e6e6;
-    }
-</style>
-
+<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 <h3>
     Litteroinnit:
 </h3>
