--- a/static/styles.css
+++ b/static/styles.css
@@ -1,23 +1,30 @@
- .transcription {
-      border-bottom: dashed gray 2px;
-      margin: 0 0 0 0;
-      padding: 0 0 0.4rem 0;
-    }
+body {
+    font-family: Arial, sans-serif;
+    margin: 2rem;
+    background-color: #f9f9f9;
+    color: #333;
+}
 
-    .transcription p {
-      margin: 0;
-    }
+.transcription {
+    border-bottom: dashed gray 2px;
+    margin: 0 0 0 0;
+    padding: 0 0 0.4rem 0;
+}
 
-    .transcription h3 {
-      margin: 0.5rem 0;
-    }
+.transcription p {
+    margin: 0;
+}
 
-    .transcription .operations {
-      background-color: antiquewhite;
-      width: 8rem;
-      margin: 0.4rem 0;
-      padding: 0.1rem 1rem;
-    }
+.transcription h3 {
+    margin: 0.5rem 0;
+}
+
+.transcription .operations {
+    background-color: antiquewhite;
+    width: 8rem;
+    margin: 0.4rem 0;
+    padding: 0.1rem 1rem;
+}
 
 
 table {
