--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
         {% if session.user_id %}
         <a href="/logout">Kirjaudu ulos</a>
         {% else %}
-      <div class="login-buttons">
+      <div class="login-operations-box">
         <a href="/register">Luo tunnus</a>
 
         <a href="/login">Kirjaudu sisään</a>
