--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rekisteröinti</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   <style>
     .flash-message {
       color: red;
@@ -12,31 +13,40 @@
 </head>
 
 <body>
+  <div class="main-wrapper">
+    <div class="header">
+      <h1>Luo tunnus</h1>
+    </div>
+    {% for message in get_flashed_messages() %}
+    <p class="flash-message">
+      <b>{{ message }}</b>
+    </p>
+    {% endfor %}
 
-  <h1>Luo tunnus</h1>
-
-  {% for message in get_flashed_messages() %}
-  <p class="flash-message">
-    <b>{{ message }}</b>
-  </p>
-  {% endfor %}
-  <form action="/register" method="post">
-    <p>
-      Tunnus: <br />
-      <input type="text" name="username" required value="{{ filled.username }}" />
+    <div class="login-operations-box register-box">
+      <form action="/register" method="post">
+        <p>
+          Tunnus: <br />
+          <input type="text" name="username" required value="{{ filled.username }}" />
+        </p>
+        <p>Salasanan tulee olla vähintään 8 merkkiä pitkä ja sisältää ainakin yhden ison kirjaimen, yhden pienen
+          kirjaimen
+          ja yhden numeron</p>
+        <p>
+          Salasana: <br />
+          <input type="password" name="password1" required />
+        </p>
+        <p>
+          Salasana uudestaan: <br />
+          <input type="password" name="password2" required />
+        </p>
+        <input type="submit" value="Luo tunnus" />
+      </form>
+    </div>
+    <p class="login-operations-box">
+      <a href="/">Etusivulle</a>
     </p>
-    <p>Salasanan tulee olla vähintään 8 merkkiä pitkä ja sisältää ainakin yhden ison kirjaimen, yhden pienen kirjaimen
-      ja yhden numeron</p>
-    <p>
-      Salasana: <br />
-      <input type="password" name="password1" required />
-    </p>
-    <p>
-      Salasana uudestaan: <br />
-      <input type="password" name="password2" required />
-    </p>
-    <input type="submit" value="Luo tunnus" />
-  </form>
+  </div>
 </body>
 
 </html>
